--- a/assets/css/login-page/login-page.css
+++ b/assets/css/login-page/login-page.css
@@ -60,7 +60,7 @@
   outline: 2px solid #464eff;
 }
 
-.form-group button {
+/* .form-group button {
   display: flex;
   justify-content: center;
   align-self: flex-end;
@@ -75,7 +75,7 @@
   border: none;
   cursor: pointer;
   background: #ea580c;
-}
+} */
 .login-input-div .link-group{
     display: flex;
     flex-direction: column;
