--- a/assets/css/Team/hire-section.css
+++ b/assets/css/Team/hire-section.css
@@ -4,32 +4,31 @@
 }
 .hire-main-div {
   width: 100%;
-  display: grid;
-  grid-template-columns: repeat(1, minmax(0, 1fr));
-  row-gap: 2.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2.5rem;
 }
 .hire-main-div .hire-grid {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  position: relative;
-  opacity: 0.5;
-  transition: .2s ease-in-out;
-}
-.hire-main-div .hire-grid:hover {
-  -webkit-box-shadow: 0px 0 0 2px #6DFFC1;
-  -moz-box-shadow: 0px 0 0 2px #6DFFC1;
-  box-shadow: 0px 0 0 2px #6DFFC1;
-  opacity: 1;
-}
-.hire-grid-gradient {
-  width: 26.5rem;
-  height: 26.5rem;
+  width: 19.5rem;
+  height: 19.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 50%;
+  position: relative;
+  opacity: 0.5;
+  transition: 0.2s ease-in-out;
 }
-.hire-main-div .hire-grid .hire-grid-gradient h6 {
+.hire-main-div .hire-grid:hover {
+  -webkit-box-shadow: 0px 0 0 2px #6dffc1;
+  -moz-box-shadow: 0px 0 0 2px #6dffc1;
+  box-shadow: 0px 0 0 2px #6dffc1;
+  opacity: 1;
+}
+
+.hire-main-div .hire-grid h6 {
   font-family: Inter;
   font-size: 1.25rem;
   font-style: normal;
@@ -61,6 +60,7 @@
     margin-top: 3.12rem;
   }
   .hire-main-div {
+    display: grid;
     grid-template-columns: repeat(3, minmax(0, 1fr));
     padding: 0 3.75rem 0 3.75rem;
     column-gap: 3.5rem;
@@ -71,5 +71,32 @@
   }
   .hire-main-div .hire-grid .hire-grid-gradient h6 {
     font-size: 1.5rem;
+  }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+ 
+  .hire-main-div {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    padding: 0 1.25rem 0 1.25rem;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .hire-main-div {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    padding: 0 1.5rem 0 1.5rem;
+  }
+}
+@media screen and (min-width: 640px) and (max-width: 767px) {
+  .hire-main-div {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    padding: 0 1.5rem 0 1.5rem;
+  }
+  .hire-main-div .hire-grid {
+    max-width: 17.5rem;
+    max-height: 17.5rem;
   }
 }
