--- a/assets/css/Team/challenge.css
+++ b/assets/css/Team/challenge.css
@@ -1,7 +1,215 @@
-.challenge-section{
-    width: 100%;
-    height: auto;
+.challenge-section {
+  width: 100%;
+  height: auto;
+  margin-bottom: 3rem;
 }
-.main-challenge-section{
-    
+.main-challenge-section {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 5rem;
+}
+.main-challenge-section .challenge-video-content {
+  display: flex;
+  position: relative;
+  justify-content: flex-start;
+}
+.challenge-video-content .challenge-video {
+  position: relative;
+  width: auto;
+  height: auto;
+}
+.challenge-video img {
+  width: 100%;
+  object-fit: cover;
+  height: 100%;
+}
+
+.challenge-video .video-icon-span {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.challenge-video-content .challenge-text-content {
+  display: flex;
+  align-items: center;
+}
+.challenge-video-content h3 {
+  color: #fff;
+  font-family: Helvetica;
+  font-size: 2.5rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%;
+  position: relative;
+  left: -6rem;
+  align-self: center;
+}
+.main-challenge-section .challenge-banner-content {
+  width: 100%;
+}
+.challenge-content-grid .content-grid-cards {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.content-grid-cards h5 {
+  color: #fff;
+  font-family: Inter;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 140%;
+}
+.content-grid-cards span {
+  width: 100%;
+  height: 1px;
+  background: radial-gradient(
+    circle,
+    rgba(255, 255, 255, 1) 5%,
+    rgba(2, 6, 23, 1) 100%
+  );
+}
+.content-grid-cards p {
+  color: #cbd5e1;
+  font-family: Inter;
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 180%;
+  letter-spacing: 0.0625rem;
+}
+.challenge-banner-content .challenge-banner {
+  width: 100%;
+  height: auto;
+  margin-top: 1.5rem;
+}
+.challenge-banner img {
+  width: 100%;
+  height: auto;
+}
+
+@media screen and (min-width: 1280px) {
+  .challenge-section {
+    margin-top: 3.12rem;
+  }
+  .main-challenge-section {
+    padding-left: 3.75rem;
+    padding-right: 3.75rem;
+  }
+  .challenge-video {
+    flex-shrink: 0;
+  }
+  .challenge-video-content h3 {
+    font-size: 4.5rem;
+    max-width: 68.7rem;
+  }
+  .challenge-banner-content .challenge-content-grid {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    column-gap: 5rem;
+  }
+  .content-grid-cards h5 {
+    font-size: 2.25rem;
+    max-width: 28.5rem;
+  }
+  .content-grid-cards p {
+    font-size: 1rem;
+  }
+}
+@media screen and (max-width: 1279px) {
+  .challenge-section {
+    margin-top: 2rem;
+  }
+  .challenge-banner-content .challenge-content-grid {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    column-gap: 2rem;
+    row-gap: 2rem;
+  }
+  .main-challenge-section {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
+  .challenge-video {
+    flex-shrink: 0;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .challenge-section {
+    margin-top: 2rem;
+  }
+  .challenge-video {
+    flex-shrink: 1;
+  }
+}
+
+@media screen and (max-width: 639px) {
+  .challenge-banner-content .challenge-content-grid {
+    display: grid;
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+    /* padding: 0 1.25rem 0 1.25rem; */
+    row-gap: 2.5rem;
+  }
+  .content-grid-cards h5 {
+    max-width: 22rem;
+  }
+  .content-grid-cards p {
+    max-width: 30.4rem;
+  }
+  .challenge-video {
+    flex-shrink: 1;
+  }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .challenge-video-content h3 {
+    font-size: 4.5rem;
+    max-width: 30.7rem;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .challenge-video-content h3 {
+    left: -3rem;
+    font-size: 2.5rem;
+    max-width: 40rem;
+  }
+  .video-icon-span .video-icon-svg {
+    width: 3rem;
+    height: 7rem;
+  }
+}
+@media screen and (min-width: 640px) and (max-width: 767px) {
+  .challenge-video-content h3 {
+    left: -2rem;
+  }
+}
+@media screen and (min-width: 420px) and (max-width: 639px) {
+  .challenge-video-content h3 {
+    left: -2rem;
+    font-size: 1.7rem;
+  }
+  .video-icon-span .video-icon-svg {
+    width: 3rem;
+    height: 5rem;
+  }
+}
+@media screen and (min-width: 320px) and (max-width: 420px) {
+  .main-challenge-section {
+    gap: 2.5rem;
+  }
+  .challenge-video-content h3 {
+    left: -2rem;
+    font-size: 1.5rem;
+  }
+  .video-icon-span .video-icon-svg {
+    width: 2rem;
+    height: 5rem;
+  }
 }
