--- a/assets/css/Team/team-hero.css
+++ b/assets/css/Team/team-hero.css
@@ -67,7 +67,7 @@
   }
   .team-hero-span h3 {
     font-size: 4.5rem;
-    max-width: 89.6rem;
+    max-width: 53.6rem;
   }
   .team-hero-main .team-video-div {
     max-width: 34.4rem;
@@ -82,7 +82,7 @@
   }
   .team-hero-span h3 {
     font-size: 3.5rem;
-    max-width: 89.6rem;
+    max-width: 55.6rem;
   }
   .team-hero-main .team-video-div {
     max-width: 34.4rem;
@@ -96,7 +96,7 @@
   }
   .team-hero-span h3 {
     font-size: 3.5rem;
-    max-width: 89.6rem;
+    max-width: 33.6rem;
   }
   .team-hero-main .team-video-div {
     max-width: 34.4rem;
@@ -105,5 +105,16 @@
 }
 
 @media screen and (min-width:420px) and (max-width:639px){
-  
+  .team-hero-main {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+  .team-hero-span h3 {
+    font-size: 2.5rem;
+    max-width: 33.6rem;
+  }
+  .team-hero-main .team-video-div {
+    /* max-width: 34.4rem; */
+    max-height: 34.4rem;
+  }
 }
