journal page updated

--- a/assets/css/Team/hire-modal.css
+++ b/assets/css/Team/hire-modal.css
@@ -118,21 +118,23 @@
   background: transparent;
   cursor: pointer;
 }
-.hire-dialog-form .form-close-btn {
-  align-items: center;
-  justify-content: flex-end;
-  /* padding: 2.1rem 3rem 0 0; */
+
+.hire-dialog-form  {
+  position: relative;
+  /* display: flex; */
 }
-.hire-dialog-form .form-close-btn button {
-  display: none;
-  align-items: center;
+.hire-dialog-form  #close-btn-lg {
+  display: flex;
+  position: absolute;
+  top: 15px;
+  right: 10%;
   background: transparent;
   border: none;
   gap: 5px;
   cursor: pointer;
   color: #fff;
 }
-.hire-dialog-form .form-close-btn button p {
+.hire-dialog-form  button p {
   font-family: Inter;
   font-size: 1rem;
   font-style: normal;
@@ -146,7 +148,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 1.5rem;
+  gap: 1rem;
 }
 .hire-dialog-form .form-content h4 {
   font-family: Helvetica;
@@ -155,12 +157,13 @@
   font-weight: 700;
   line-height: 120%;
   color: #fff;
+  margin-top: 1.5rem;
 }
 .hire-dialog-form .form-content form {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 1.5rem;
+  gap: 1.2rem;
   width: 100%;
   /* padding-right: 5rem; */
 }
@@ -180,8 +183,10 @@
   letter-spacing: 0.0625rem;
 }
 .form-content form label input,select{
-  /* width: 40.1rem; */
   height: 4rem;
+}
+.form-content form .text-area{
+  height: 7.0625rem;
 }
 
 .form-content form button{
@@ -189,6 +194,10 @@
   border: none;
   align-self: flex-end;
   color:  #fff;
+}
+.form-content form .free-quote-btn{
+  width: 273px;
+  height: 50px;
 }
 
 @media screen and (min-width:1536px) {
@@ -216,7 +225,7 @@
   }
   .hire-dialog-form .form-close-btn{
     display: flex;
-    padding: 2.1rem 3rem 0 0;
+    padding: 1.1rem 3rem 0 0;
   }
   .hire-dialog-form .form-content form{
     padding-right: 5rem;
@@ -228,7 +237,7 @@
     font-size: 3rem;
   }
   .form-content form label input,select{
-    height: 4rem;
+    height: 3.375rem;
   }
 
  
