--- a/assets/css/Team/search-modal.css
+++ b/assets/css/Team/search-modal.css
@@ -1,9 +1,7 @@
 #s-d {
-  width: 85%;
+  position: relative;
+  width: 86%;
   height: 18.75rem;
-  margin-top: 8rem;
-  margin-left: auto;
-  margin-right: auto;
   background: #0f172a;
   border-radius: 1.25rem;
 }
@@ -83,4 +81,25 @@ input {
   line-height: 180%; /* 1.8rem */
   color: #fff;
   letter-spacing: 0.0625rem;
+}
+
+@media screen and (min-width:1280px) {
+  #s-d{
+    left: 10%;
+    top: 15%;
+  }
+  
+}
+@media screen and (max-width:1279px) {
+  #s-d{
+    left: 10%;
+    top: 15%;
+  }
+}
+@media screen and (max-width:1023px) {
+  #s-d{
+    left: 0;
+   margin: 0 auto;
+    top: 15%;
+  }
 }
