--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -25,7 +25,9 @@
   /* outline: 1px solid red; */
   box-sizing: border-box;
 }
-
+.border{
+  border: 1px solid red;
+}
 body {
   background-color: #020617;
   font-family: "Inter", sans-serif !important;
